--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "parcel serve ./src/index.html",
+    "build": "parcel build ./src/index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -16,5 +18,9 @@
   "bugs": {
     "url": "https://github.com/juliolegrec/single-price-grid-component-front-mentor/issues"
   },
-  "homepage": "https://github.com/juliolegrec/single-price-grid-component-front-mentor#readme"
+  "homepage": "https://github.com/juliolegrec/single-price-grid-component-front-mentor#readme",
+  "devDependencies": {
+    "@parcel/transformer-sass": "^2.0.0-beta.2",
+    "parcel": "^2.0.0-beta.2"
+  }
 }
