--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "single-price-grid-component-front-mentor",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
     "start": "parcel serve ./src/index.html",
     "build": "parcel build ./src/index.html",
